data/derived/comb/progs/unify/prog2174.ml.out
Characters 136-137:
  List.fold_left f base l;;
                 ^
Error: This expression has type (string list -> string) -> 'a -> string
       but an expression was expected of type
         (string list -> string) -> 'a -> string list -> string
       Type string is not compatible with type string list -> string 
